--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./assets/logo.png" type="image/png" />
 
     <title>Conversor de Moeda</title>
   </head>
